# straitjacket

./: .codespellrc  .gitignore  .housekeeping.toml  .vale.ini  CHANGELOG.md  Cargo.toml  README.md  action.yml  install.sh
.github/: dependabot.yml
.github/workflows/: auto-update-pr-branches.yml  ci.yml  codespell.yml  conventional.yml  housekeeping.yml  release.yml  vale.yml
notes/: dataflow.md  design.md
scripts/: coverage.sh  dev.sh
site/: biome.base.json  package.json
site/content/docs/: index.mdx
site/content/docs/about/: contributing.mdx
site/content/docs/guides/: ci.mdx  meta.json
site/content/docs/reference/: cli.mdx  config-file.mdx  github-action.mdx  rules.mdx
site/src/app/(home)/: page.tsx
site/src/components/: icons.tsx
site/src/lib/: layout.shared.tsx  shared.ts
site/tests/: docs.test.ts
src/: config.rs  duplication.rs  engine.rs  finding.rs  lib.rs  main.rs  nesting.rs  sarif.rs  slop_prose.rs  walk.rs
src/dataflow/: analysis.rs  mod.rs  spec.rs
src/dataflow/queries/: python.scm  rust.scm  typescript.scm
src/rules/: emoji.rs  mod.rs  patterns.rs
tests/: dataflow.rs  rules.rs  unused_markers.rs
