[package]
name = "straitjacket"
version = "0.1.0"
edition = "2021"
description = "Flags weird code that LLMs tend to generate, ahead of time — a slop scanner for CI."
license = "MIT"
repository = "https://github.com/zmaril/straitjacket"

[[bin]]
name = "straitjacket"
path = "src/main.rs"

[lib]
name = "straitjacket"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unic-emoji-char = "0.9"

[profile.release]
lto = true
strip = true
