[package]
name = "straitjacket"
version = "0.2.0"
edition = "2021"
description = "Flags weird code that LLMs tend to generate, ahead of time — a slop scanner for CI."
license = "MIT"
repository = "https://github.com/zmaril/straitjacket"

[[bin]]
name = "straitjacket"
path = "src/main.rs"

[lib]
name = "straitjacket"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpd-finder = "0.1.8"
ignore = "0.4"
oxc_allocator = "0.133"
oxc_ast = "0.133"
oxc_ast_visit = "0.133"
oxc_parser = "0.133"
oxc_semantic = "0.133"
oxc_span = "0.133"
oxc_syntax = "0.133"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
unic-emoji-char = "0.9"

[profile.release]
lto = true
strip = true
