[package]
name = "straitjacket"
version = "0.2.3"
edition = "2021"
description = "Flags weird code that LLMs tend to generate, ahead of time — a slop scanner for CI."
license = "MIT"
repository = "https://github.com/zmaril/straitjacket"

[[bin]]
name = "straitjacket"
path = "src/main.rs"

[lib]
name = "straitjacket"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cpd-finder = "0.1.8"
ignore = "0.4"
oxc_allocator = "0.139"
oxc_ast = "0.139"
oxc_ast_visit = "0.139"
oxc_parser = "0.139"
oxc_semantic = "0.139"
oxc_span = "0.139"
oxc_syntax = "0.139"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
streaming-iterator = "0.1.9"
toml = "1.1"
tree-sitter = "0.26.10"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
unic-emoji-char = "0.9"

[profile.release]
lto = true
strip = true
